# pg_ladybug

./: .gitignore  README.md  install.sh  out.tmp  runClangTidy.sh  runStaticAnalysis.sh
src/: CMakeLists.txt
src/staticAnalyzer/: .gitignore  CMakeLists.txt  PostgresChecker.cpp
